--- a/notebooks/changePointAnalyisis.ipynb
+++ b/notebooks/changePointAnalyisis.ipynb
@@ -1062,31 +1062,22 @@
         }
       ],
       "source": [
-        "# Bayesian Change Point Detection using PyMC3\n",
-        "with pm.Model() as model:\n",
-        "    # Priors\n",
-        "  mean_prior = pm.Normal('mean_prior', mu=mean_price, sigma=10)\n",
-        "  change_point = pm.DiscreteUniform('change_point', lower=0, upper=len(data)-1)\n",
+        "# # Bayesian Change Point Detection using PyMC3\n",
+        "# with pm.Model() as model:\n",
+        "#     # Priors\n",
+        "#   mean_prior = pm.Normal('mean_prior', mu=mean_price, sigma=10)\n",
+        "#   change_point = pm.DiscreteUniform('change_point', lower=0, upper=len(price_data)-1)\n",
         "\n",
-        "    # Likelihood\n",
-        "  likelihood = pm.Normal('likelihood', mu=mean_prior, sigma=10, observed=data['Price'])\n",
+        "#     # Likelihood\n",
+        "#   likelihood = pm.Normal('likelihood', mu=mean_prior, sigma=10, observed=price_data['Price'])\n",
         "\n",
-        "    # Inference\n",
-        "  trace = pm.sample(1000, tune=1000, cores=2)\n",
+        "#     # Inference\n",
+        "#   trace = pm.sample(1000, tune=1000, cores=2)\n",
         "\n",
-        "# Plot results\n",
-        "pm.plot_posterior(trace)\n",
-        "plt.show()"
+        "# # Plot results\n",
+        "# pm.plot_posterior(trace)\n",
+        "# plt.show()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "hSBSUDcA4AeB"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -1096,33 +1087,81 @@
       },
       "outputs": [],
       "source": [
-        "def changePointDetection(price_data):\n",
-        "    prices = price_data['Price'].values\n",
-        "    n = len(prices)\n",
+        "# def changePointDetection(price_data):\n",
+        "#     prices = price_data['Price'].values\n",
+        "#     n = len(prices)\n",
         "\n",
-        "    with pm.Model() as model:\n",
-        "        change_point = pm.DiscreteUniform(\"change_point\", lower=0, upper=n)\n",
+        "#     with pm.Model() as model:\n",
+        "#         change_point = pm.DiscreteUniform(\"change_point\", lower=0, upper=n)\n",
         "\n",
-        "        mean1 = pm.Normal(\"mean1\", mu=np.mean(prices[:n//2]), sigma=np.std(prices[:n//2]))\n",
-        "        mean2 = pm.Normal(\"mean2\", mu=np.mean(prices[n//2:]), sigma=np.std(prices[n//2:]))\n",
-        "        sigma = pm.HalfNormal(\"sigma\", sigma=10)\n",
+        "#         mean1 = pm.Normal(\"mean1\", mu=np.mean(prices[:n//2]), sigma=np.std(prices[:n//2]))\n",
+        "#         mean2 = pm.Normal(\"mean2\", mu=np.mean(prices[n//2:]), sigma=np.std(prices[n//2:]))\n",
+        "#         sigma = pm.HalfNormal(\"sigma\", sigma=10)\n",
         "\n",
-        "        idx = np.arange(n)\n",
-        "        mean = pm.math.switch(idx < change_point, mean1, mean2)\n",
-        "        obs = pm.Normal(\"obs\", mu=mean, sigma=sigma, observed=prices)\n",
+        "#         idx = np.arange(n)\n",
+        "#         mean = pm.math.switch(idx < change_point, mean1, mean2)\n",
+        "#         obs = pm.Normal(\"obs\", mu=mean, sigma=sigma, observed=prices)\n",
         "\n",
-        "        trace = pm.sample(1500, tune=1500, target_accept=0.95, chains=4)\n",
+        "#         trace = pm.sample(1500, tune=1500, target_accept=0.95, chains=4)\n",
         "\n",
-        "    pm.plot_trace(trace,figsize=(20,20))\n",
-        "    plt.show()\n"
+        "#     pm.plot_trace(trace,figsize=(20,20))\n",
+        "#     plt.show()\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Df6BGDOz3Hlr"
-      },
-      "source": []
+      "metadata": {},
+      "source": [
+        "### Applying Time Series Analysis to Brent Oil Prices\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "To detect patterns, trends, and seasonality within Brent oil price data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### The parameters \n",
+        "##### p, d, and 𝑞 in an ARIMA model represent the following:\n",
+        "##### p: The number of autoregressive (AR) terms. This parameter captures how past values affect the current value.\n",
+        "##### d: The order of differencing required to make the time series stationary (removing trends).\n",
+        "##### q: The number of moving average (MA) terms. This parameter accounts for past forecast errors."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Perform ADF test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ADF Statistic: -1.9938560113924675\n",
+            "p-value: 0.28927350489340287\n"
+          ]
+        }
+      ],
+      "source": [
+        "adf_result = adfuller(price_data['Price'])\n",
+        "print('ADF Statistic:', adf_result[0])\n",
+        "print('p-value:', adf_result[1])\n",
+        "\n",
+        "if adf_result[1] > 0.05:\n",
+        "    price_data['price_diff'] = price_data['Price'].diff().dropna()"
+      ]
     }
   ],
   "metadata": {
