--- a/notebooks/change_point_analysis.ipynb
+++ b/notebooks/change_point_analysis.ipynb
@@ -2473,6 +2473,258 @@
       "source": [
         "correlations(combined_data)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_og = data.copy()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        ">> ## Technological Changes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    period originId       originName originType originTypeName destinationId  \\\n",
+            "0  2022-08   CTY_UK   United Kingdom        CTY        Country         PS_CA   \n",
+            "1  2022-08   REG_CA  Canada (Region)        REG         Region        RF_502   \n",
+            "2  2022-08   REG_CA  Canada (Region)        REG         Region        RF_393   \n",
+            "3  2022-08   REG_CA  Canada (Region)        REG         Region        RF_288   \n",
+            "4  2022-08    OPN_N         Non-OPEC        OPN  OPEC/non-OPEC        RF_502   \n",
+            "\n",
+            "                                     destinationName destinationType  \\\n",
+            "0                                         California              PS   \n",
+            "1  VALERO REFINING CO TEXAS LP / HOUSTON REFINERY...              RF   \n",
+            "2               PHILLIPS 66 / BILLINGS REFINERY / MT              RF   \n",
+            "3                       LIMA REFINING CO / LIMA / OH              RF   \n",
+            "4  VALERO REFINING CO TEXAS LP / HOUSTON REFINERY...              RF   \n",
+            "\n",
+            "  destinationTypeName gradeId    gradeName quantity    quantity-units  \n",
+            "0          Port State     HSW  Heavy Sweet      499  thousand barrels  \n",
+            "1            Refinery     HSO   Heavy Sour      249  thousand barrels  \n",
+            "2            Refinery     MED       Medium      305  thousand barrels  \n",
+            "3            Refinery     MED       Medium       75  thousand barrels  \n",
+            "4            Refinery     HSO   Heavy Sour      249  thousand barrels  \n"
+          ]
+        }
+      ],
+      "source": [
+        "import requests\n",
+        "import pandas as pd\n",
+        "\n",
+        "API_KEY = 'TfbBX8D8Fq9NIZuZ7luWDz6Uno7hNOmTnNN05CDg'\n",
+        "# API URL and parameters\n",
+        "url = \"https://api.eia.gov/v2/crude-oil-imports/data/\"\n",
+        "params = {\n",
+        "    \"frequency\": \"monthly\",\n",
+        "    \"data[0]\": \"quantity\",\n",
+        "    \"start\": \"2009-01\",\n",
+        "    \"end\": \"2022-08\",\n",
+        "    \"sort[0][column]\": \"period\",\n",
+        "    \"sort[0][direction]\": \"desc\",\n",
+        "    \"offset\": 0,\n",
+        "    \"length\": 5000\n",
+        "}\n",
+        "\n",
+        "# Set the headers to include the API key\n",
+        "headers = {\n",
+        "    'X-Api-Key': API_KEY\n",
+        "}\n",
+        "\n",
+        "# Make the GET request\n",
+        "response = requests.get(url, params=params, headers=headers)\n",
+        "\n",
+        "# Check if the request was successful\n",
+        "if response.status_code == 200:\n",
+        "    # Convert the response to JSON\n",
+        "    data = response.json()\n",
+        "    \n",
+        "    # Extract the data portion\n",
+        "    if 'data' in data['response']:\n",
+        "        oil_imports = data['response']['data']\n",
+        "        \n",
+        "        # Convert to a DataFrame\n",
+        "        df_oil_imports = pd.DataFrame(oil_imports)\n",
+        "        \n",
+        "        # Display the DataFrame\n",
+        "        print(df_oil_imports.head())  # Show the first few rows\n",
+        "    else:\n",
+        "        print(\"No data found in the response.\")\n",
+        "else:\n",
+        "    print(f\"Error: {response.status_code} - {response.text}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>period</th>\n",
+              "      <th>originId</th>\n",
+              "      <th>originName</th>\n",
+              "      <th>originType</th>\n",
+              "      <th>originTypeName</th>\n",
+              "      <th>destinationId</th>\n",
+              "      <th>destinationName</th>\n",
+              "      <th>destinationType</th>\n",
+              "      <th>destinationTypeName</th>\n",
+              "      <th>gradeId</th>\n",
+              "      <th>gradeName</th>\n",
+              "      <th>quantity</th>\n",
+              "      <th>quantity-units</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2022-08</td>\n",
+              "      <td>CTY_UK</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>CTY</td>\n",
+              "      <td>Country</td>\n",
+              "      <td>PS_CA</td>\n",
+              "      <td>California</td>\n",
+              "      <td>PS</td>\n",
+              "      <td>Port State</td>\n",
+              "      <td>HSW</td>\n",
+              "      <td>Heavy Sweet</td>\n",
+              "      <td>499</td>\n",
+              "      <td>thousand barrels</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2022-08</td>\n",
+              "      <td>REG_CA</td>\n",
+              "      <td>Canada (Region)</td>\n",
+              "      <td>REG</td>\n",
+              "      <td>Region</td>\n",
+              "      <td>RF_502</td>\n",
+              "      <td>VALERO REFINING CO TEXAS LP / HOUSTON REFINERY...</td>\n",
+              "      <td>RF</td>\n",
+              "      <td>Refinery</td>\n",
+              "      <td>HSO</td>\n",
+              "      <td>Heavy Sour</td>\n",
+              "      <td>249</td>\n",
+              "      <td>thousand barrels</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2022-08</td>\n",
+              "      <td>REG_CA</td>\n",
+              "      <td>Canada (Region)</td>\n",
+              "      <td>REG</td>\n",
+              "      <td>Region</td>\n",
+              "      <td>RF_393</td>\n",
+              "      <td>PHILLIPS 66 / BILLINGS REFINERY / MT</td>\n",
+              "      <td>RF</td>\n",
+              "      <td>Refinery</td>\n",
+              "      <td>MED</td>\n",
+              "      <td>Medium</td>\n",
+              "      <td>305</td>\n",
+              "      <td>thousand barrels</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2022-08</td>\n",
+              "      <td>REG_CA</td>\n",
+              "      <td>Canada (Region)</td>\n",
+              "      <td>REG</td>\n",
+              "      <td>Region</td>\n",
+              "      <td>RF_288</td>\n",
+              "      <td>LIMA REFINING CO / LIMA / OH</td>\n",
+              "      <td>RF</td>\n",
+              "      <td>Refinery</td>\n",
+              "      <td>MED</td>\n",
+              "      <td>Medium</td>\n",
+              "      <td>75</td>\n",
+              "      <td>thousand barrels</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2022-08</td>\n",
+              "      <td>OPN_N</td>\n",
+              "      <td>Non-OPEC</td>\n",
+              "      <td>OPN</td>\n",
+              "      <td>OPEC/non-OPEC</td>\n",
+              "      <td>RF_502</td>\n",
+              "      <td>VALERO REFINING CO TEXAS LP / HOUSTON REFINERY...</td>\n",
+              "      <td>RF</td>\n",
+              "      <td>Refinery</td>\n",
+              "      <td>HSO</td>\n",
+              "      <td>Heavy Sour</td>\n",
+              "      <td>249</td>\n",
+              "      <td>thousand barrels</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    period originId       originName originType originTypeName destinationId  \\\n",
+              "0  2022-08   CTY_UK   United Kingdom        CTY        Country         PS_CA   \n",
+              "1  2022-08   REG_CA  Canada (Region)        REG         Region        RF_502   \n",
+              "2  2022-08   REG_CA  Canada (Region)        REG         Region        RF_393   \n",
+              "3  2022-08   REG_CA  Canada (Region)        REG         Region        RF_288   \n",
+              "4  2022-08    OPN_N         Non-OPEC        OPN  OPEC/non-OPEC        RF_502   \n",
+              "\n",
+              "                                     destinationName destinationType  \\\n",
+              "0                                         California              PS   \n",
+              "1  VALERO REFINING CO TEXAS LP / HOUSTON REFINERY...              RF   \n",
+              "2               PHILLIPS 66 / BILLINGS REFINERY / MT              RF   \n",
+              "3                       LIMA REFINING CO / LIMA / OH              RF   \n",
+              "4  VALERO REFINING CO TEXAS LP / HOUSTON REFINERY...              RF   \n",
+              "\n",
+              "  destinationTypeName gradeId    gradeName quantity    quantity-units  \n",
+              "0          Port State     HSW  Heavy Sweet      499  thousand barrels  \n",
+              "1            Refinery     HSO   Heavy Sour      249  thousand barrels  \n",
+              "2            Refinery     MED       Medium      305  thousand barrels  \n",
+              "3            Refinery     MED       Medium       75  thousand barrels  \n",
+              "4            Refinery     HSO   Heavy Sour      249  thousand barrels  "
+            ]
+          },
+          "execution_count": 60,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_oil_imports.head()"
+      ]
     }
   ],
   "metadata": {
