--- a/notebooks/change_point_analysis.ipynb
+++ b/notebooks/change_point_analysis.ipynb
@@ -2725,6 +2725,169 @@
       "source": [
         "df_oil_imports.head()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        ">> ## Renewable Energy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import requests\n",
+        "import pandas as pd\n",
+        "\n",
+        "# API Key (replace with your own if different)\n",
+        "API_KEY = 'TfbBX8D8Fq9NIZuZ7luWDz6Uno7hNOmTnNN05CDg'\n",
+        "\n",
+        "# API URL and parameters\n",
+        "url = \"https://api.eia.gov/v2/steo/data/\"\n",
+        "params = {\n",
+        "    \"frequency\": \"monthly\",\n",
+        "    \"data[0]\": \"value\",\n",
+        "    \"facets\": {},\n",
+        "    \"start\": \"1987-01\",\n",
+        "    \"end\": \"2022-11\",\n",
+        "    \"sort[0][column]\": \"period\",\n",
+        "    \"sort[0][direction]\": \"desc\",\n",
+        "    \"offset\": 0,\n",
+        "    \"length\": 5000\n",
+        "}\n",
+        "\n",
+        "# Set the headers with the API key\n",
+        "headers = {\n",
+        "    'X-Api-Key': API_KEY\n",
+        "}\n",
+        "\n",
+        "# Make the GET request\n",
+        "response = requests.get(url, params=params, headers=headers)\n",
+        "\n",
+        "# Check if the request was successful\n",
+        "if response.status_code == 200:\n",
+        "    # Convert response to JSON\n",
+        "    data = response.json()\n",
+        "    \n",
+        "    # Extract 'data' field from JSON, which contains the import data\n",
+        "    if 'response' in data and 'data' in data['response']:\n",
+        "        oil_imports = data['response']['data']\n",
+        "        \n",
+        "        # Create a DataFrame from the data\n",
+        "        renewable_energy = pd.DataFrame(oil_imports)\n",
+        "        \n",
+        "        # Display the DataFrame\n",
+        "    else:\n",
+        "        print(\"No data found in the response.\")\n",
+        "else:\n",
+        "    print(f\"Error: {response.status_code} - {response.text}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>period</th>\n",
+              "      <th>seriesId</th>\n",
+              "      <th>seriesDescription</th>\n",
+              "      <th>value</th>\n",
+              "      <th>unit</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2022-11</td>\n",
+              "      <td>EXRCP_US</td>\n",
+              "      <td>Retail Sales of Electricity in Residential Sec...</td>\n",
+              "      <td>3438.402591</td>\n",
+              "      <td>million kilowatthours per day</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2022-11</td>\n",
+              "      <td>NWDAP</td>\n",
+              "      <td>Appalachia New Wells Drilled</td>\n",
+              "      <td>98</td>\n",
+              "      <td>None</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2022-11</td>\n",
+              "      <td>NGEPGEN_TX</td>\n",
+              "      <td>Electric power sector net generation from natu...</td>\n",
+              "      <td>11.997335792</td>\n",
+              "      <td>billion kilowatthours</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2022-11</td>\n",
+              "      <td>OBNIPUS</td>\n",
+              "      <td>Other Biofuels Net Imports</td>\n",
+              "      <td>0</td>\n",
+              "      <td>million barrels per day</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2022-11</td>\n",
+              "      <td>OGEPGEN_NY</td>\n",
+              "      <td>Electric power sector net generation from othe...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>billion kilowatthours</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    period    seriesId                                  seriesDescription  \\\n",
+              "0  2022-11    EXRCP_US  Retail Sales of Electricity in Residential Sec...   \n",
+              "1  2022-11       NWDAP                       Appalachia New Wells Drilled   \n",
+              "2  2022-11  NGEPGEN_TX  Electric power sector net generation from natu...   \n",
+              "3  2022-11     OBNIPUS                         Other Biofuels Net Imports   \n",
+              "4  2022-11  OGEPGEN_NY  Electric power sector net generation from othe...   \n",
+              "\n",
+              "          value                           unit  \n",
+              "0   3438.402591  million kilowatthours per day  \n",
+              "1            98                           None  \n",
+              "2  11.997335792          billion kilowatthours  \n",
+              "3             0        million barrels per day  \n",
+              "4             0          billion kilowatthours  "
+            ]
+          },
+          "execution_count": 62,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "renewable_energy.head()"
+      ]
     }
   ],
   "metadata": {
