--- a/notebooks/change_point_analysis.ipynb
+++ b/notebooks/change_point_analysis.ipynb
@@ -3371,10 +3371,363 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Date</th>\n",
+              "      <th>Price</th>\n",
+              "      <th>year</th>\n",
+              "      <th>price_diff</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1987-05-20</td>\n",
+              "      <td>18.63</td>\n",
+              "      <td>1987</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1987-05-21</td>\n",
+              "      <td>18.45</td>\n",
+              "      <td>1987</td>\n",
+              "      <td>-0.18</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1987-05-22</td>\n",
+              "      <td>18.55</td>\n",
+              "      <td>1987</td>\n",
+              "      <td>0.10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1987-05-25</td>\n",
+              "      <td>18.60</td>\n",
+              "      <td>1987</td>\n",
+              "      <td>0.05</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1987-05-26</td>\n",
+              "      <td>18.63</td>\n",
+              "      <td>1987</td>\n",
+              "      <td>0.03</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        Date  Price  year  price_diff\n",
+              "0 1987-05-20  18.63  1987         NaN\n",
+              "1 1987-05-21  18.45  1987       -0.18\n",
+              "2 1987-05-22  18.55  1987        0.10\n",
+              "3 1987-05-25  18.60  1987        0.05\n",
+              "4 1987-05-26  18.63  1987        0.03"
+            ]
+          },
+          "execution_count": 67,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data_og.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 68,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "data_og['Date'] = pd.to_datetime(data_og['Date'])\n",
+        "natural_gas['period'] = pd.to_datetime(natural_gas['period'])\n",
+        "coal_cons['period'] = pd.to_datetime(coal_cons['period'])\n",
+        "renewable_energy['period'] = pd.to_datetime(renewable_energy['period'])\n",
+        "df_oil_imports['period'] = pd.to_datetime(df_oil_imports['period'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "natural_gas = natural_gas[['period', 'area-name', 'product-name', 'series-description', 'value', 'units']]\n",
+        "coal_consumption = coal_cons[['period', 'location', 'sectorDescription', 'consumption', 'price', 'consumption-units', 'price-units']]\n",
+        "renewable_energy = renewable_energy[['period', 'seriesDescription', 'value', 'unit']]\n",
+        "df_oil_imports = df_oil_imports[['period', 'originName', 'gradeName', 'quantity', 'quantity-units']]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_og = data_og.reset_index()\n",
+        "natural_gas = natural_gas.reset_index()\n",
+        "coal_consumption = coal_consumption.reset_index()\n",
+        "renewable_energy = renewable_energy.reset_index()\n",
+        "df_oil_imports = df_oil_imports.reset_index()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 71,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_og.set_index('Date', inplace=True)\n",
+        "natural_gas.set_index('period', inplace=True)\n",
+        "coal_consumption.set_index('period', inplace=True)\n",
+        "renewable_energy.set_index('period', inplace=True)\n",
+        "df_oil_imports.set_index('period', inplace=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 72,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "index                  int64\n",
+            "area-name             object\n",
+            "product-name          object\n",
+            "series-description    object\n",
+            "value                 object\n",
+            "units                 object\n",
+            "dtype: object\n",
+            "index                 int64\n",
+            "location             object\n",
+            "sectorDescription    object\n",
+            "consumption          object\n",
+            "price                object\n",
+            "consumption-units    object\n",
+            "price-units          object\n",
+            "dtype: object\n",
+            "index                 int64\n",
+            "seriesDescription    object\n",
+            "value                object\n",
+            "unit                 object\n",
+            "dtype: object\n",
+            "index              int64\n",
+            "originName        object\n",
+            "gradeName         object\n",
+            "quantity          object\n",
+            "quantity-units    object\n",
+            "dtype: object\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(natural_gas.dtypes)\n",
+        "print(coal_consumption.dtypes)\n",
+        "print(renewable_energy.dtypes)\n",
+        "print(df_oil_imports.dtypes)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 73,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "natural_gas['value'] = pd.to_numeric(natural_gas['value'], errors='coerce')\n",
+        "coal_consumption['consumption'] = pd.to_numeric(coal_consumption['consumption'], errors='coerce')\n",
+        "renewable_energy['value'] = pd.to_numeric(renewable_energy['value'], errors='coerce')\n",
+        "df_oil_imports['quantity'] = pd.to_numeric(df_oil_imports['quantity'], errors='coerce')\n",
+        "\n",
+        "natural_gas['value_x'] = natural_gas['value'].fillna(natural_gas['value'].median())\n",
+        "coal_consumption['consumption'] = coal_consumption['consumption'].fillna(coal_consumption['consumption'].median())\n",
+        "renewable_energy['value_y'] = renewable_energy['value'].fillna(renewable_energy['value'].median())\n",
+        "df_oil_imports['quantity'] = df_oil_imports['quantity'].fillna(df_oil_imports['quantity'].median())\n",
+        "\n",
+        "\n",
+        "natural_gas_monthly = natural_gas.resample('M').mean(numeric_only=True)\n",
+        "coal_consumption_monthly = coal_consumption.resample('M').sum(numeric_only=True)\n",
+        "renewable_energy_monthly = renewable_energy.resample('M').sum(numeric_only=True)\n",
+        "oil_imports_monthly = df_oil_imports.resample('M').sum(numeric_only=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "common_date_range = pd.date_range(start='2009-01', end='2022-08', freq='M')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_og = data_og.reindex(common_date_range)\n",
+        "natural_gas_monthly = natural_gas_monthly.reindex(common_date_range)\n",
+        "coal_consumption_monthly = coal_consumption_monthly.reindex(common_date_range)\n",
+        "renewable_energy_monthly = renewable_energy_monthly.reindex(common_date_range)\n",
+        "oil_imports_monthly = oil_imports_monthly.reindex(common_date_range)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 76,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>index</th>\n",
+              "      <th>location</th>\n",
+              "      <th>sectorDescription</th>\n",
+              "      <th>consumption</th>\n",
+              "      <th>price</th>\n",
+              "      <th>consumption-units</th>\n",
+              "      <th>price-units</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>period</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2022-07-01</th>\n",
+              "      <td>0</td>\n",
+              "      <td>81</td>\n",
+              "      <td>Electric Utility</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>short tons</td>\n",
+              "      <td>dollars per short ton</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-01</th>\n",
+              "      <td>1</td>\n",
+              "      <td>WY</td>\n",
+              "      <td>Electric Power</td>\n",
+              "      <td>6261685.0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>short tons</td>\n",
+              "      <td>dollars per short ton</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-01</th>\n",
+              "      <td>2</td>\n",
+              "      <td>WV</td>\n",
+              "      <td>Electric Power</td>\n",
+              "      <td>6176330.0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>short tons</td>\n",
+              "      <td>dollars per short ton</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-01</th>\n",
+              "      <td>3</td>\n",
+              "      <td>WI</td>\n",
+              "      <td>Electric Power</td>\n",
+              "      <td>3619609.0</td>\n",
+              "      <td>45.25</td>\n",
+              "      <td>short tons</td>\n",
+              "      <td>dollars per short ton</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-01</th>\n",
+              "      <td>4</td>\n",
+              "      <td>WA</td>\n",
+              "      <td>Electric Power</td>\n",
+              "      <td>771067.0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>short tons</td>\n",
+              "      <td>dollars per short ton</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            index location sectorDescription  consumption  price  \\\n",
+              "period                                                             \n",
+              "2022-07-01      0       81  Electric Utility          0.0   None   \n",
+              "2022-07-01      1       WY    Electric Power    6261685.0   None   \n",
+              "2022-07-01      2       WV    Electric Power    6176330.0   None   \n",
+              "2022-07-01      3       WI    Electric Power    3619609.0  45.25   \n",
+              "2022-07-01      4       WA    Electric Power     771067.0   None   \n",
+              "\n",
+              "           consumption-units            price-units  \n",
+              "period                                               \n",
+              "2022-07-01        short tons  dollars per short ton  \n",
+              "2022-07-01        short tons  dollars per short ton  \n",
+              "2022-07-01        short tons  dollars per short ton  \n",
+              "2022-07-01        short tons  dollars per short ton  \n",
+              "2022-07-01        short tons  dollars per short ton  "
+            ]
+          },
+          "execution_count": 76,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "coal_consumption.head()"
+      ]
     }
   ],
   "metadata": {
