save technological data

--- a/notebooks/change_point_analysis.ipynb
+++ b/notebooks/change_point_analysis.ipynb
@@ -3936,6 +3936,15 @@
         "combined_df.plot(kind='scatter', x='Natural_Gas_Value', y='Oil_Price', title='Oil Price vs. Natural Gas Value')\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 88,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "combined_df.to_csv('./docs/technological_data.csv')"
+      ]
     }
   ],
   "metadata": {
